--- a/STM32_Files/Controller/Controller.ioc
+++ b/STM32_Files/Controller/Controller.ioc
@@ -19,8 +19,6 @@ CAD.pinconfig=
 CAD.provider=
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
-I2C1.IPParameters=Timing
-I2C1.Timing=0x10909CEC
 I2C2.IPParameters=Timing
 I2C2.Timing=0x10909CEC
 KeepUserPlacement=false
@@ -28,45 +26,39 @@ Mcu.CPN=STM32L476RGT3
 Mcu.Family=STM32L4
 Mcu.IP0=ADC1
 Mcu.IP1=ADC2
-Mcu.IP2=I2C1
-Mcu.IP3=I2C2
-Mcu.IP4=NVIC
-Mcu.IP5=RCC
-Mcu.IP6=TIM2
-Mcu.IP7=USART2
-Mcu.IPNb=8
+Mcu.IP2=I2C2
+Mcu.IP3=NVIC
+Mcu.IP4=RCC
+Mcu.IP5=TIM2
+Mcu.IP6=USART2
+Mcu.IPNb=7
 Mcu.Name=STM32L476R(C-E-G)Tx
 Mcu.Package=LQFP64
-Mcu.Pin0=PC14-OSC32_IN (PC14)
-Mcu.Pin1=PC15-OSC32_OUT (PC15)
-Mcu.Pin10=PA6
-Mcu.Pin11=PA7
-Mcu.Pin12=PB1
-Mcu.Pin13=PB2
-Mcu.Pin14=PB11
-Mcu.Pin15=PB12
-Mcu.Pin16=PB13
-Mcu.Pin17=PB14
-Mcu.Pin18=PC6
-Mcu.Pin19=PC7
-Mcu.Pin2=PH0-OSC_IN (PH0)
-Mcu.Pin20=PC8
-Mcu.Pin21=PA11
-Mcu.Pin22=PA12
-Mcu.Pin23=PA13 (JTMS-SWDIO)
-Mcu.Pin24=PA14 (JTCK-SWCLK)
-Mcu.Pin25=PB3 (JTDO-TRACESWO)
-Mcu.Pin26=PB8
-Mcu.Pin27=PB9
-Mcu.Pin28=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin3=PH1-OSC_OUT (PH1)
-Mcu.Pin4=PC0
-Mcu.Pin5=PC1
-Mcu.Pin6=PA0
-Mcu.Pin7=PA2
-Mcu.Pin8=PA3
-Mcu.Pin9=PA5
-Mcu.PinsNb=29
+Mcu.Pin0=PC0
+Mcu.Pin1=PC1
+Mcu.Pin10=PB1
+Mcu.Pin11=PB2
+Mcu.Pin12=PB11
+Mcu.Pin13=PB12
+Mcu.Pin14=PB13
+Mcu.Pin15=PB14
+Mcu.Pin16=PC6
+Mcu.Pin17=PC7
+Mcu.Pin18=PC8
+Mcu.Pin19=PA11
+Mcu.Pin2=PC2
+Mcu.Pin20=PA12
+Mcu.Pin21=PC10
+Mcu.Pin22=PC12
+Mcu.Pin23=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin3=PC3
+Mcu.Pin4=PA0
+Mcu.Pin5=PA2
+Mcu.Pin6=PA3
+Mcu.Pin7=PA5
+Mcu.Pin8=PA6
+Mcu.Pin9=PA7
+Mcu.PinsNb=24
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32L476RGTx
@@ -95,16 +87,8 @@ PA12.GPIOParameters=GPIO_Label
 PA12.GPIO_Label=LCD_D2
 PA12.Locked=true
 PA12.Signal=GPIO_Output
-PA13\ (JTMS-SWDIO).GPIOParameters=GPIO_Label
-PA13\ (JTMS-SWDIO).GPIO_Label=TMS
-PA13\ (JTMS-SWDIO).Locked=true
-PA13\ (JTMS-SWDIO).Signal=SYS_JTMS-SWDIO
-PA14\ (JTCK-SWCLK).GPIOParameters=GPIO_Label
-PA14\ (JTCK-SWCLK).GPIO_Label=TCK
-PA14\ (JTCK-SWCLK).Locked=true
-PA14\ (JTCK-SWCLK).Signal=SYS_JTCK-SWCLK
 PA2.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
-PA2.GPIO_Label=LCD_USART_TX
+PA2.GPIO_Label=Bluetooth_TX
 PA2.GPIO_Mode=GPIO_MODE_AF_PP
 PA2.GPIO_PuPd=GPIO_NOPULL
 PA2.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
@@ -112,7 +96,7 @@ PA2.Locked=true
 PA2.Mode=Asynchronous
 PA2.Signal=USART2_TX
 PA3.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
-PA3.GPIO_Label=LCD_USART_RX
+PA3.GPIO_Label=Bluetooth_RX
 PA3.GPIO_Mode=GPIO_MODE_AF_PP
 PA3.GPIO_PuPd=GPIO_NOPULL
 PA3.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
@@ -157,30 +141,28 @@ PB2.GPIOParameters=GPIO_Label
 PB2.GPIO_Label=LCD_D6
 PB2.Locked=true
 PB2.Signal=GPIO_Output
-PB3\ (JTDO-TRACESWO).GPIOParameters=GPIO_Label
-PB3\ (JTDO-TRACESWO).GPIO_Label=SWO
-PB3\ (JTDO-TRACESWO).Locked=true
-PB3\ (JTDO-TRACESWO).Signal=SYS_JTDO-SWO
-PB8.GPIOParameters=GPIO_Label
-PB8.GPIO_Label=BT_SCL
-PB8.Locked=true
-PB8.Mode=I2C
-PB8.Signal=I2C1_SCL
-PB9.GPIOParameters=GPIO_Label
-PB9.GPIO_Label=BT_SDA
-PB9.Locked=true
-PB9.Mode=I2C
-PB9.Signal=I2C1_SDA
 PC0.GPIOParameters=GPIO_Label
 PC0.GPIO_Label=JS_X
 PC0.Signal=ADCx_IN1
 PC1.GPIOParameters=GPIO_Label
 PC1.GPIO_Label=JS_Y
 PC1.Signal=ADCx_IN2
-PC14-OSC32_IN\ (PC14).Locked=true
-PC14-OSC32_IN\ (PC14).Signal=RCC_OSC32_IN
-PC15-OSC32_OUT\ (PC15).Locked=true
-PC15-OSC32_OUT\ (PC15).Signal=RCC_OSC32_OUT
+PC10.GPIOParameters=GPIO_Label
+PC10.GPIO_Label=LCD_Register_Select
+PC10.Locked=true
+PC10.Signal=GPIO_Output
+PC12.GPIOParameters=GPIO_Label
+PC12.GPIO_Label=LCD_Enable
+PC12.Locked=true
+PC12.Signal=GPIO_Output
+PC2.GPIOParameters=GPIO_Label
+PC2.GPIO_Label=Bluetooth_State
+PC2.Locked=true
+PC2.Signal=GPIO_Input
+PC3.GPIOParameters=GPIO_Label
+PC3.GPIO_Label=Bluetooth_Enable
+PC3.Locked=true
+PC3.Signal=GPIO_Output
 PC6.GPIOParameters=GPIO_Label
 PC6.GPIO_Label=LCD_D1
 PC6.Locked=true
@@ -193,10 +175,6 @@ PC8.GPIOParameters=GPIO_Label
 PC8.GPIO_Label=LCD_D0
 PC8.Locked=true
 PC8.Signal=GPIO_Output
-PH0-OSC_IN\ (PH0).Locked=true
-PH0-OSC_IN\ (PH0).Signal=RCC_OSC_IN
-PH1-OSC_OUT\ (PH1).Locked=true
-PH1-OSC_OUT\ (PH1).Signal=RCC_OSC_OUT
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
@@ -218,8 +196,8 @@ ProjectManager.MainLocation=Core/Src
 ProjectManager.NoMain=false
 ProjectManager.PreviousToolchain=
 ProjectManager.ProjectBuild=false
-ProjectManager.ProjectFileName=CubeMX_Scripts.ioc
-ProjectManager.ProjectName=CubeMX_Scripts
+ProjectManager.ProjectFileName=Controller.ioc
+ProjectManager.ProjectName=Controller
 ProjectManager.ProjectStructure=
 ProjectManager.RegisterCallBack=
 ProjectManager.StackSize=0x400
@@ -228,7 +206,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_ADC1_Init-ADC1-false-HAL-true,4-MX_ADC2_Init-ADC2-false-HAL-true,5-MX_I2C2_Init-I2C2-false-HAL-true,6-MX_TIM2_Init-TIM2-false-HAL-true,7-MX_USART2_UART_Init-USART2-false-HAL-true
 RCC.ADCFreq_Value=64000000
 RCC.AHBFreq_Value=80000000
 RCC.APB1Freq_Value=80000000
