--- a/STM32_Files/Controller/Controller.ioc
+++ b/STM32_Files/Controller/Controller.ioc
@@ -1,11 +1,11 @@
 #MicroXplorer Configuration settings - do not modify
-ADC1.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_1
+ADC1.Channel-1\#ChannelRegularConversion=ADC_CHANNEL_2
 ADC1.CommonPathInternal=null|null|null|null
-ADC1.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,OffsetNumber-0\#ChannelRegularConversion,NbrOfConversionFlag,master,CommonPathInternal
+ADC1.IPParameters=Rank-1\#ChannelRegularConversion,master,Channel-1\#ChannelRegularConversion,SamplingTime-1\#ChannelRegularConversion,OffsetNumber-1\#ChannelRegularConversion,NbrOfConversionFlag,CommonPathInternal
 ADC1.NbrOfConversionFlag=1
-ADC1.OffsetNumber-0\#ChannelRegularConversion=ADC_OFFSET_NONE
-ADC1.Rank-0\#ChannelRegularConversion=1
-ADC1.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_2CYCLES_5
+ADC1.OffsetNumber-1\#ChannelRegularConversion=ADC_OFFSET_NONE
+ADC1.Rank-1\#ChannelRegularConversion=1
+ADC1.SamplingTime-1\#ChannelRegularConversion=ADC_SAMPLETIME_2CYCLES_5
 ADC1.master=1
 ADC2.Channel-1\#ChannelRegularConversion=ADC_CHANNEL_5
 ADC2.CommonPathInternal=null|null|null|null
@@ -30,34 +30,34 @@ Mcu.IP2=I2C2
 Mcu.IP3=NVIC
 Mcu.IP4=RCC
 Mcu.IP5=TIM2
-Mcu.IP6=USART2
+Mcu.IP6=UART5
 Mcu.IPNb=7
 Mcu.Name=STM32L476R(C-E-G)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC0
 Mcu.Pin1=PC1
-Mcu.Pin10=PB1
-Mcu.Pin11=PB2
-Mcu.Pin12=PB11
-Mcu.Pin13=PB12
-Mcu.Pin14=PB13
-Mcu.Pin15=PB14
-Mcu.Pin16=PC6
-Mcu.Pin17=PC7
-Mcu.Pin18=PC8
-Mcu.Pin19=PA11
-Mcu.Pin2=PC2
-Mcu.Pin20=PA12
-Mcu.Pin21=PC10
-Mcu.Pin22=PC12
+Mcu.Pin10=PB13
+Mcu.Pin11=PB14
+Mcu.Pin12=PB15
+Mcu.Pin13=PC6
+Mcu.Pin14=PC7
+Mcu.Pin15=PC8
+Mcu.Pin16=PA11
+Mcu.Pin17=PA12
+Mcu.Pin18=PC12
+Mcu.Pin19=PD2
+Mcu.Pin2=PA0
+Mcu.Pin20=PB6
+Mcu.Pin21=PB8
+Mcu.Pin22=PB9
 Mcu.Pin23=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin3=PC3
-Mcu.Pin4=PA0
-Mcu.Pin5=PA2
-Mcu.Pin6=PA3
-Mcu.Pin7=PA5
-Mcu.Pin8=PA6
-Mcu.Pin9=PA7
+Mcu.Pin3=PA6
+Mcu.Pin4=PA7
+Mcu.Pin5=PC5
+Mcu.Pin6=PB1
+Mcu.Pin7=PB2
+Mcu.Pin8=PB11
+Mcu.Pin9=PB12
 Mcu.PinsNb=24
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
@@ -84,29 +84,9 @@ PA11.GPIO_Label=LCD_D3
 PA11.Locked=true
 PA11.Signal=GPIO_Output
 PA12.GPIOParameters=GPIO_Label
-PA12.GPIO_Label=LCD_D2
+PA12.GPIO_Label=LCD_D4
 PA12.Locked=true
 PA12.Signal=GPIO_Output
-PA2.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
-PA2.GPIO_Label=Bluetooth_TX
-PA2.GPIO_Mode=GPIO_MODE_AF_PP
-PA2.GPIO_PuPd=GPIO_NOPULL
-PA2.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
-PA2.Locked=true
-PA2.Mode=Asynchronous
-PA2.Signal=USART2_TX
-PA3.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
-PA3.GPIO_Label=Bluetooth_RX
-PA3.GPIO_Mode=GPIO_MODE_AF_PP
-PA3.GPIO_PuPd=GPIO_NOPULL
-PA3.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
-PA3.Locked=true
-PA3.Mode=Asynchronous
-PA3.Signal=USART2_RX
-PA5.GPIOParameters=GPIO_Label
-PA5.GPIO_Label=SD_Mode_Button
-PA5.Locked=true
-PA5.Signal=GPIO_Input
 PA6.GPIOParameters=GPIO_Label
 PA6.GPIO_Label=Manual_Mode_LED
 PA6.Locked=true
@@ -116,15 +96,15 @@ PA7.GPIO_Label=SD_Mode_LED
 PA7.Locked=true
 PA7.Signal=GPIO_Output
 PB1.GPIOParameters=GPIO_Label
-PB1.GPIO_Label=LCD_D7
+PB1.GPIO_Label=LCD_EN
 PB1.Locked=true
 PB1.Signal=GPIO_Output
 PB11.GPIOParameters=GPIO_Label
-PB11.GPIO_Label=LCD_D5
+PB11.GPIO_Label=LCD_D1
 PB11.Locked=true
 PB11.Signal=GPIO_Output
 PB12.GPIOParameters=GPIO_Label
-PB12.GPIO_Label=LCD_D4
+PB12.GPIO_Label=LCD_D2
 PB12.Locked=true
 PB12.Signal=GPIO_Output
 PB13.GPIOParameters=GPIO_Label
@@ -137,34 +117,42 @@ PB14.GPIO_Label=OLED_SDA
 PB14.Locked=true
 PB14.Mode=I2C
 PB14.Signal=I2C2_SDA
+PB15.GPIOParameters=GPIO_Label
+PB15.GPIO_Label=LCD_RS
+PB15.Locked=true
+PB15.Signal=GPIO_Output
 PB2.GPIOParameters=GPIO_Label
-PB2.GPIO_Label=LCD_D6
+PB2.GPIO_Label=LCD_D0
 PB2.Locked=true
 PB2.Signal=GPIO_Output
+PB6.GPIOParameters=GPIO_Label
+PB6.GPIO_Label=SD_Button
+PB6.Locked=true
+PB6.Signal=GPIO_Output
+PB8.GPIOParameters=GPIO_Label
+PB8.GPIO_Label=Bluetooth_State
+PB8.Locked=true
+PB8.Signal=GPIO_Output
+PB9.GPIOParameters=GPIO_Label
+PB9.GPIO_Label=Bluetooth_Enable
+PB9.Locked=true
+PB9.Signal=GPIO_Output
 PC0.GPIOParameters=GPIO_Label
 PC0.GPIO_Label=JS_X
 PC0.Signal=ADCx_IN1
 PC1.GPIOParameters=GPIO_Label
 PC1.GPIO_Label=JS_Y
 PC1.Signal=ADCx_IN2
-PC10.GPIOParameters=GPIO_Label
-PC10.GPIO_Label=LCD_Register_Select
-PC10.Locked=true
-PC10.Signal=GPIO_Output
 PC12.GPIOParameters=GPIO_Label
-PC12.GPIO_Label=LCD_Enable
-PC12.Locked=true
-PC12.Signal=GPIO_Output
-PC2.GPIOParameters=GPIO_Label
-PC2.GPIO_Label=Bluetooth_State
-PC2.Locked=true
-PC2.Signal=GPIO_Input
-PC3.GPIOParameters=GPIO_Label
-PC3.GPIO_Label=Bluetooth_Enable
-PC3.Locked=true
-PC3.Signal=GPIO_Output
+PC12.GPIO_Label=Bluetooth_TX
+PC12.Mode=Asynchronous
+PC12.Signal=UART5_TX
+PC5.GPIOParameters=GPIO_Label
+PC5.GPIO_Label=LCD_D5
+PC5.Locked=true
+PC5.Signal=GPIO_Output
 PC6.GPIOParameters=GPIO_Label
-PC6.GPIO_Label=LCD_D1
+PC6.GPIO_Label=LCD_D6
 PC6.Locked=true
 PC6.Signal=GPIO_Output
 PC7.GPIOParameters=GPIO_Label
@@ -172,9 +160,13 @@ PC7.GPIO_Label=Manual_Mode_Button
 PC7.Locked=true
 PC7.Signal=GPIO_Input
 PC8.GPIOParameters=GPIO_Label
-PC8.GPIO_Label=LCD_D0
+PC8.GPIO_Label=LCD_D7
 PC8.Locked=true
 PC8.Signal=GPIO_Output
+PD2.GPIOParameters=GPIO_Label
+PD2.GPIO_Label=Bluetooth_RX
+PD2.Mode=Asynchronous
+PD2.Signal=UART5_RX
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
@@ -267,8 +259,6 @@ SH.ADCx_IN2.0=ADC1_IN2,IN2-Single-Ended
 SH.ADCx_IN2.ConfNb=1
 SH.ADCx_IN5.0=ADC2_IN5,IN5-Single-Ended
 SH.ADCx_IN5.ConfNb=1
-USART2.IPParameters=VirtualMode-Asynchronous
-USART2.VirtualMode-Asynchronous=VM_ASYNC
 VP_TIM2_VS_ClockSourceINT.Mode=Internal
 VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
 board=NUCLEO-L476RG
