Updated .ioc file for the controller

--- a/STM32_Files/Controller/Controller.ioc
+++ b/STM32_Files/Controller/Controller.ioc
@@ -1,19 +1,12 @@
 #MicroXplorer Configuration settings - do not modify
 ADC1.Channel-1\#ChannelRegularConversion=ADC_CHANNEL_2
 ADC1.CommonPathInternal=null|null|null|null
-ADC1.IPParameters=Rank-1\#ChannelRegularConversion,master,Channel-1\#ChannelRegularConversion,SamplingTime-1\#ChannelRegularConversion,OffsetNumber-1\#ChannelRegularConversion,NbrOfConversionFlag,CommonPathInternal
+ADC1.IPParameters=Rank-1\#ChannelRegularConversion,Channel-1\#ChannelRegularConversion,SamplingTime-1\#ChannelRegularConversion,OffsetNumber-1\#ChannelRegularConversion,NbrOfConversionFlag,master,CommonPathInternal
 ADC1.NbrOfConversionFlag=1
 ADC1.OffsetNumber-1\#ChannelRegularConversion=ADC_OFFSET_NONE
 ADC1.Rank-1\#ChannelRegularConversion=1
 ADC1.SamplingTime-1\#ChannelRegularConversion=ADC_SAMPLETIME_2CYCLES_5
 ADC1.master=1
-ADC2.Channel-1\#ChannelRegularConversion=ADC_CHANNEL_5
-ADC2.CommonPathInternal=null|null|null|null
-ADC2.IPParameters=Rank-1\#ChannelRegularConversion,Channel-1\#ChannelRegularConversion,SamplingTime-1\#ChannelRegularConversion,OffsetNumber-1\#ChannelRegularConversion,NbrOfConversionFlag,CommonPathInternal
-ADC2.NbrOfConversionFlag=1
-ADC2.OffsetNumber-1\#ChannelRegularConversion=ADC_OFFSET_NONE
-ADC2.Rank-1\#ChannelRegularConversion=1
-ADC2.SamplingTime-1\#ChannelRegularConversion=ADC_SAMPLETIME_2CYCLES_5
 CAD.formats=
 CAD.pinconfig=
 CAD.provider=
@@ -25,13 +18,12 @@ KeepUserPlacement=false
 Mcu.CPN=STM32L476RGT3
 Mcu.Family=STM32L4
 Mcu.IP0=ADC1
-Mcu.IP1=ADC2
-Mcu.IP2=I2C2
-Mcu.IP3=NVIC
-Mcu.IP4=RCC
-Mcu.IP5=TIM2
-Mcu.IP6=UART5
-Mcu.IPNb=7
+Mcu.IP1=I2C2
+Mcu.IP2=NVIC
+Mcu.IP3=RCC
+Mcu.IP4=TIM2
+Mcu.IP5=UART5
+Mcu.IPNb=6
 Mcu.Name=STM32L476R(C-E-G)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC0
@@ -76,7 +68,7 @@ NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:false
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 PA0.GPIOParameters=GPIO_Label
-PA0.GPIO_Label=Pot_Value
+PA0.GPIO_Label=Pot_Val
 PA0.Locked=true
 PA0.Signal=ADCx_IN5
 PA11.GPIOParameters=GPIO_Label
@@ -198,7 +190,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_ADC1_Init-ADC1-false-HAL-true,4-MX_ADC2_Init-ADC2-false-HAL-true,5-MX_I2C2_Init-I2C2-false-HAL-true,6-MX_TIM2_Init-TIM2-false-HAL-true,7-MX_USART2_UART_Init-USART2-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_ADC1_Init-ADC1-false-HAL-true,4-MX_ADC2_Init-ADC2-false-HAL-true,5-MX_I2C2_Init-I2C2-false-HAL-true,6-MX_TIM2_Init-TIM2-false-HAL-true,7-MX_UART5_Init-UART5-false-HAL-true
 RCC.ADCFreq_Value=64000000
 RCC.AHBFreq_Value=80000000
 RCC.APB1Freq_Value=80000000
@@ -257,7 +249,7 @@ SH.ADCx_IN1.0=ADC1_IN1,IN1-Single-Ended
 SH.ADCx_IN1.ConfNb=1
 SH.ADCx_IN2.0=ADC1_IN2,IN2-Single-Ended
 SH.ADCx_IN2.ConfNb=1
-SH.ADCx_IN5.0=ADC2_IN5,IN5-Single-Ended
+SH.ADCx_IN5.0=ADC1_IN5,IN5-Single-Ended
 SH.ADCx_IN5.ConfNb=1
 VP_TIM2_VS_ClockSourceINT.Mode=Internal
 VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
